--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           
           <h2 data-aos="fade-up" data-aos-delay="400" class="aos-init aos-animate">SKG V7 PRO SMART WATCH WITH ALEXA BUILT-IN &amp; BLUETOOTH CALL(ANSWER/MAKE CALL)</h2>
           <div data-aos="fade-up" data-aos-delay="800" class="aos-init aos-animate">
-            <a href="watch.html" class="btn-get-started scrollto">Buy Now</a>
+            <a href="https://skg-watch.netlify.app/" class="btn-get-started scrollto">Buy Now</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img aos-init aos-animate" data-aos="fade-left" data-aos-delay="200">
@@ -132,7 +132,7 @@
             <p>
               ✅MAKE/ANSWER CALL &amp; SMART NOTIFICATION: With built-in speaker and Bluetooth connectivity, you can directly make or receive calls with your family and friends via the smartwatch, also it supports multiple smart reminders, including incoming calls, text, SNS messages (Facebook, WhatsApp, Twitter, etc), daily reminder, etc, extremely convenient for your life and you will never miss any important information.
             </p>
-            <a href="watch.html" class="btn-learn-more">Buy Now</a>
+            <a href="https://skg-watch.netlify.app/" class="btn-learn-more">Buy Now</a>
           </div>
         </div>
 
